--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,8 +3,6 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
     id 'dagger.hilt.android.plugin'
-
-
 }
 
 
@@ -12,13 +10,12 @@ android {
     namespace 'com.example.tap_payment_task'
     compileSdk 33
 
+    /**
+     * enable viewBinding
+     */
+
     buildFeatures {
         viewBinding true
-    }
-    kapt {
-//        javacOptions {
-//            option("-Adagger.hilt.android.internal.disableAndroidSuperclassValidation=true")
-//        }
     }
     defaultConfig {
         applicationId "com.example.tap_payment_task"
@@ -32,7 +29,8 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -48,6 +46,9 @@ android {
 dependencies {
     def nav_version = "2.5.3"
     // Kotlin
+    /**
+     * navigation graph library for android navigation fragments
+     */
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
     /**
@@ -57,6 +58,10 @@ dependencies {
     implementation 'com.intuit.ssp:ssp-android:1.1.0'
     implementation 'com.intuit.sdp:sdp-android:1.0.6'
 
+
+    /**
+     * library for loading progress button
+     */
     implementation project(path: ":loading-button-android")
 
     implementation 'androidx.core:core-ktx:1.9.0'
@@ -67,6 +72,9 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
+    /**
+     * dagger Hilt dependency for Dependency Injection
+     */
     implementation "com.google.dagger:hilt-android:2.44"
     kapt "com.google.dagger:hilt-compiler:2.44"
 }
